--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>IAM Recruitment partner.</title>
- <link rel="stylesheet" href="./font/montserrat/stylesheet.css">
+ <link rel="stylesheet" href="./font/montserrat/stylesheet.css?v=7">
  <link rel="stylesheet" href="./style.css?v=2">
  <link rel="icon" href="./img/fav-icom.png" type="image/png">
 
@@ -147,7 +147,7 @@
   </div>
 </footer>
 </div>
- <script  type="module" src="./js/script.js"></script>
+ <script  type="module" src="./js/script.js?v=7"></script>
 
 </body>
 </html>
